# tumourmodel-py

./: CMakeLists.txt  README.md  pyproject.toml
src/tumourmodel/: __init__.py  _core.cpp
src/tumourmodel/cpp/: Helper.hpp  Model.cpp  Model.h  Params.hpp  Params_constants.cpp  delaunator.hpp
tests/: test_biphasic.py  test_smoke.py
